[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
serde = { version = "1.0.115"}
secrecy = { version = "0.8", features = ["serde"] }
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
tracing = { version = "0.1.19"}
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
serde-aux = "4.2.0"
unicode-segmentation = "1.10.1"
claim = "0.5.0"
#uuid = { version = "1", features = ["v4"] }

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
]

[dev-dependencies]
reqwest = "0.11.18"
once_cell = "1.7.2"
